NEWS
----

201710281259:

    - Debian packaging.

201710260757:

    - First beta.
    - Multi-thread for better precision.
    - Systemd is no longer needed to run the application in daemon mode.
    - The configuration file is easier to write.
    - More command line options.

201709100845:

    - The application is now called Snapman. I liked Timemachine, but Apple 
    came up with it first.