@@ -8,12 +8,14 @@
 # The section name is the path to directory where the snapshots were be stored.
 # Full path to subvolume to copy:
 subvolume = /
-# The frequency in seconds, minutes, hours, days or years (see man 5 snapman)
+# The frequency in seconds, minutes, hours, days or years (see man 5 snapman):
 frequency = 1d
-# The maximun number of allowed snapshots
+# The maximun number of allowed snapshots:
 quota = 30
-# Set to True for a readonly snapshot, otherwise set to False
+# Set to True for a readonly snapshot, otherwise set to False:
 readonly = True
+# Set to True for enable snapshotting, otherwise set to False:
+enabled = True
 
 [/backups/OS]
 
